fix: button spacing

--- a/site/docs/stylesheets/extra.css
+++ b/site/docs/stylesheets/extra.css
@@ -29,6 +29,14 @@
     gap: 0.5rem;
 }
 
+div.author-card-container > p {
+    display: inline-flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
+    gap: 0.5rem;
+}
+
 .author-card.md-button {
     display: flex;
     border-radius: .2rem;
